Upgrade to Spring Framework 4.0
The build now compiles with Servlet API 3.0 and JPA 2.0 both of which
are required with Spring Framework 4.0. However there are no hard
dependencies in Web Flow on either.

Issue: SWF-1600