@@ -109,12 +109,7 @@ class SimpleFlowExecutionSnapshotGroup implements FlowExecutionSnapshotGroup, Se
 	}
 
 	public Serializable nextSnapshotId() {
-		Integer nextSnapshotId;
-		if (JdkVersion.isAtLeastJava15()) {
-			nextSnapshotId = Integer.valueOf(snapshotIdSequence);
-		} else {
-			nextSnapshotId = new Integer(snapshotIdSequence);
-		}
+		Integer nextSnapshotId = Integer.valueOf(snapshotIdSequence);
 		snapshotIdSequence++;
 		return nextSnapshotId;
 	}
